Kong/echo-ingress-rule.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api
  labels:
    app: api
spec:
  rules:
    - host: echo.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: echo
              servicePort: 80
