Kong/kong-ingress-rule.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kong-proxy
  namespace: kong
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: kong.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kong-proxy
              servicePort: 80
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kong-admin
  namespace: kong
  labels:
    app: kong-admin
spec:
  rules:
    - host: kongadmin.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kong-admin
              servicePort: 80
